# autonomous-startup-team-agent

./: CONTRIBUTING.md  Dockerfile.agent  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build-and-push.yml
autonomous_startup_team_agent/: __init__.py  __main__.py  __version__.py  agent_config.json  main.py
autonomous_startup_team_agent/skills/Autonomous startup business execution/: skill.yaml
docs/: index.md  modules.md
tests/: test_main.py
